<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_gravity="fill"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RadioButton

        android:text="@string/RadioButton"
        android:layout_column="0"
        android:layout_row="0"
        />

    <CheckBox
        android:id="@+id/cb"
        android:text="@string/CheckBox"
        android:layout_column="1"
        android:layout_row="0"
        />

    <Switch
        android:id="@+id/switch_bar"
        android:text="@string/swt"
        android:layout_column="0"
        android:layout_row="1"
        />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@drawable/ic_menu_camera"
        />

</GridLayout>
