<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quynh.cst2335_lab.StartActivity">
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_below="@+id/tv"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="53dp" />
    <Button
        android:id ="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/startChat"
        android:layout_below="@+id/button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToWeather"
        android:id="@+id/weatherButton"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"

        />

    <Button
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/weatherButton"
        android:layout_marginTop="15dp"
        android:text="Test Toolbar" />

</RelativeLayout>

